--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "EsproTelegraph",
     "description": "Powerful Telegram bot to generate Telegraph links for your media files. This bot can works also in group chats.",
-    "repository": "https://github.com/irtkaal/Rjgccvb",
+    "repository": "https://github.com/EsproMusic/EsproTelegraphBot",
     "keywords": [
         "telegraph",
         "telegraph link",
